# letters

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.sql
config/: default.toml
entity/: Cargo.toml
entity/src/: article.rs  article_tag.rs  category.rs  comment.rs  lib.rs  prelude.rs  series.rs  series_article.rs  tag.rs  user.rs
letters/: Cargo.toml
letters/src/: app.rs  conf.rs  error.rs  lib.rs  main.rs
letters/src/api/: article.rs  category.rs  mod.rs  series.rs  tag.rs  user.rs  v1.rs
letters/src/api/handlers/: login.rs  mod.rs
letters/src/api/response/: mod.rs
letters/src/cmd/: create_admin.rs  fake.rs  hello.rs  migrate.rs  mod.rs
letters/src/dto/: article.rs  auth.rs  category.rs  mod.rs  series.rs  tag.rs  user.rs
letters/src/handlers/: article.rs  auth.rs  category.rs  mod.rs  openapi.rs  series.rs  tag.rs  user.rs
letters/src/helper/: avatar.rs  hash.rs
letters/src/repos/: article.rs  category.rs  mod.rs  series.rs  tag.rs  user.rs
letters/src/utils/: avatar.rs  hash.rs  jwt.rs
migration/src/: m20220101_000001_create_table.rs
migrations/: 20231209024450_setup.down.sql  20231209024450_setup.up.sql  20231209032302_user.down.sql  20231209032302_user.up.sql  20231212143729_article.down.sql  20231212143729_article.up.sql  20231217130134_user.down.sql  20231217130134_user.up.sql  20231217130228_category.down.sql  20231217130228_category.up.sql  20231217130356_tag.down.sql  20231217130356_tag.up.sql  20231217130532_article.down.sql  20231217130532_article.up.sql
src/: app.rs  conf.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/handlers/: login.rs  ping.rs
src/cmd/: mod.rs  serve.rs
src/helper/: error.rs  hash.rs  jwt.rs  mod.rs
src/log/: mod.rs
src/model/: error.rs  mod.rs
src/models/: article.rs  auth.rs  category.rs  error.rs  mod.rs  tag.rs  user.rs
src/models/store/: mod.rs
src/repositories/: article.rs  category.rs  error.rs  mod.rs  tag.rs  user.rs
src/repositories/store/: error.rs  mod.rs
src/routes/: article.rs  category.rs  mod.rs  tag.rs  user.rs
