[package]
name = "letters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }

# log, tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
